--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-langchain
+streamlit
+langchain>=0.1.0
 langchain-openai
 langchain-community
 langchain-text-splitters
-streamlit
 pypdf
 faiss-cpu
+
