--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-langchain
-langchain-openai
-langchain-community
-langchain-text-splitters
+langchain==0.1.20
+langchain-community==0.0.38
+langchain-openai==0.1.7
+langchain-text-splitters==0.0.1
+
+openai>=1.12.0
+tiktoken
 pypdf
 faiss-cpu
 streamlit
+
+
 
 
 
